Changes to be committed: 	modified:   README.md 	modified:   purification_ancilla_weak_measurement.ipynb

--- a/purification_ancilla_weak_measurement.ipynb
+++ b/purification_ancilla_weak_measurement.ipynb
@@ -259,12 +259,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scrambling_type = 'haar'\n",
-    "evolution_type = 'haar'\n",
+    "scrambling_type = 'matchgate'\n",
+    "evolution_type = 'matchgate'\n",
+    "root_direc = 'data_weak_measurement/'\n",
     "def read_entropy(L,T,t_scr,theta,BC):\n",
     "    file_dir = get_filename(t_scr=t_scr,scram_U_type=scrambling_type,evolution_U_type=evolution_type,root_direc=root_direc)\n",
     "    file_dir = file_dir + '/L='+str(L)\n",
@@ -279,16 +280,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2ad2b92e0>"
+       "<matplotlib.legend.Legend at 0x2bcd8dfa0>"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +305,7 @@
     "for L in [6,8,10,12,14][1:]:\n",
     "    T = 4*L\n",
     "    t_scr = L\n",
-    "    theta = 0.4\n",
+    "    theta = 0.1\n",
     "    entropy = read_entropy(L,T,t_scr,theta,BC=BC)\n",
     "    ydata = np.average(entropy,axis=0)\n",
     "    err = np.std(entropy,axis=0)/(entropy.shape[0]-1)**0.5\n",
@@ -320,22 +321,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2ad6efac0>]"
+       "[<matplotlib.lines.Line2D at 0x2c47af700>]"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pl.plot(L_list[1:],slope,'-o')"
+    "pl.plot(L_list[1:],[1/i for i in slope],'-o')"
    ]
   },
   {
